<resources>
    <string name="app_name">Marvel</string>
    <string name="titulo">Marvel Fans</string>
    <string name="saludo">¡Hola Superhéroe! Es bueno verte nuevamente</string>
    <string name="correo">Correo</string>
    <string name="correoEjemplo">example@email.com</string>
    <string name="password">Contraseña</string>
    <string name="botonIngresar">Ingresar</string>
    <string name="conectese">O usa tu cuenta de Google para ingresar</string>
    <string name="olvidoPassword">¿Olvidó su contraseña?</string>
    <string name="registrese">Registrarse</string>
    <string name="recuperar">Recuperar Contraseña</string>
    <string name="registrar">Registro</string>
    <string name="recuperacion">Ingresa tu correo para recuperar tu contraseña</string>
    <string name="registro">¡Bienvenido a Marvel Fans!</string>
    <string name="ingresa1">Ingresa tu correo electrónico:</string>
    <string name="ingresa2">Crea una contraseña de más de 8 caracteres:</string>
    <string name="revisa">Revisa tu correo y recupera tu contraseña</string>
    <string name="ingresaCorreo">Ingresa tu correo</string>
    <string name="google">Iniciar sesión con Google</string>
    <string name="regresar">Regresar</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="busca">Buscar</string>
    <string name="tituloMarvel">Marvel Worldwide, Inc.</string>
    <string name="buscar">Buscar Personaje</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefs_file">com.example.dom_proyecto2_pedidosonline.PREFERENCE_FILE_KEY</string>
    <string name="personajes">Personajes</string>
    <string name="favs">Mis Personajes Favoritos de Marvel</string>
    <string name="camara">Cámara</string>
    <string name="biom">Autenticación Biométrica</string>
    <string name="not">Notificaciones</string>
    <string name="progress">Progress</string>
    <string name="groot">Yo soy Groot</string>
</resources>