<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/celeste"
    tools:context=".ui.activities.RegistrarseActivity">

    <TextView
        android:id="@+id/registrar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="71dp"
        android:gravity="center"
        android:text="@string/registrar"
        android:textColor="@color/rosa4"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bienvenido"
        style="@style/styleTexto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartEnd"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="71dp"
        android:gravity="center"
        android:text="@string/registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrar" />

    <TextView
        android:id="@+id/ingresa"
        style="@style/styleTexto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartEnd"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="71dp"
        android:text="@string/ingresa1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenes" />

    <TextView
        android:id="@+id/correo"
        style="@style/styleSubtitulo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="71dp"
        android:text="@string/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresa" />

    <EditText
        android:id="@+id/correoEjemplo"
        style="@style/styleTexto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="71dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/correoEjemplo"
        android:inputType="textPersonName"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <TextView
        android:id="@+id/ingresa2"
        style="@style/styleTexto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStartEnd"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="71dp"
        android:text="@string/ingresa2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoEjemplo" />

    <TextView
        android:id="@+id/password"
        style="@style/styleSubtitulo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="71dp"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresa2" />

    <EditText
        android:id="@+id/correoPassword"
        style="@style/styleTexto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="71dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/botonIngresar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="71dp"
        android:backgroundTint="@color/rosa4"
        android:text="@string/botonIngresar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoPassword" />

    <LinearLayout
        android:id="@+id/imagenes"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bienvenido">

        <ImageView
            android:id="@+id/spider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/spiderman" />

        <ImageView
            android:id="@+id/ironman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ironman" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>